--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,3 +31,5 @@
 {{ end }}
 {{ template "_internal/google_analytics.html" . }}
 <script async src="https://track.jamesflare.com/script.js" data-website-id="226742b8-6efb-4be9-8f8f-d297df42401c"></script>
+<link href="https://artalk.jamesflare.com/dist/Artalk.css" rel="stylesheet">
+<script src="https://artalk.jamesflare.com/dist/Artalk.js"></script>
