optimze mobile layout

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,6 +30,7 @@ h1, .h1, h2, .h2, h3, .h3, h4 .h4, .h5, h5, .h6, h6 {
 
 .content-column {
   padding-top: 26px;
+  padding-left: 36px;
   padding-right: 36px;
 }
 
@@ -40,6 +41,11 @@ h1, .h1, h2, .h2, h3, .h3, h4 .h4, .h5, h5, .h6, h6 {
 #sidebar {
   padding-top: 18px;
   padding-left: 36px;
+  padding-right: 0px;
+}
+
+.sidebar-content {
+  padding-right: 0px;
 }
 
 .box {
