--- a/layouts/shortcodes/comments.html
+++ b/layouts/shortcodes/comments.html
@@ -1,4 +1,4 @@
-<script src="https://artalk.jamesflare.com/dist/Artalk.js"></script>
+<script src="https://artalk.jamesflare.com/dist/Artalk.js" defer></script>
 
 <div id="artalk"></div>
 <script>
