--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,15 +20,6 @@
 {{ else }}
 <link rel="preload" href="{{ "css/style.default.css" | absURL }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
 {{ end }}
- <!-- Responsivity for older IE -->
-<!-- Just in case -->
-  {{ `
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  ` | safeHTML }}
-
 <!-- Custom stylesheet - for your changes -->
 <link rel="preload" href="{{ "css/custom.css" | absURL }}" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <link rel="shortcut icon" href="{{ "img/favicon.png" | absURL }}">
@@ -37,3 +28,4 @@
 {{ end }}
 <script async src="https://track.jamesflare.com/script.js" data-website-id="226742b8-6efb-4be9-8f8f-d297df42401c"></script>
 <link rel="preload" href="https://artalk.jamesflare.com/dist/Artalk.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="preload" href="https://artalk.jamesflare.com/dist/Artalk.js" as="script">
